generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BLANC
    ELSE
    FUNCTION
    LBRACKET
    RBRACKET
    THEN
    ignore_COMMENT
    newline

Grammar

Rule 0     S' -> debut
Rule 1     debut -> function_declaration debut
Rule 2     debut -> main
Rule 3     debut -> instruction_list
Rule 4     main -> MAIN LPAREN RPAREN LBRACE instruction_list RBRACE
Rule 5     main -> MAIN LPAREN RPAREN list_dec LBRACE instruction_list RBRACE
Rule 6     main -> ENTIER MAIN LPAREN list_dec RPAREN LBRACE instruction_list retour_expression RBRACE
Rule 7     function_declaration -> ID LPAREN list_dec RPAREN list_dec LBRACE instruction_list retour_expression RBRACE
Rule 8     function_call -> ID LPAREN argument_list RPAREN
Rule 9     argument_list -> ID
Rule 10    argument_list -> NUMBER
Rule 11    argument_list -> argument_list COMMA ID
Rule 12    argument_list -> argument_list COMMA NUMBER
Rule 13    retour_expression -> RETOUR instruction POINT_VIRG
Rule 14    list_dec -> ENTIER list_id POINT_VIRG
Rule 15    list_dec -> ENTIER list_id
Rule 16    list_id -> ID
Rule 17    list_id -> list_id COMMA ID
Rule 18    list_id -> list_id COMMA ENTIER ID
Rule 19    list_id -> ID ARRAY
Rule 20    list_id -> list_id COMMA ID ARRAY
Rule 21    list_id -> list_id COMMA ENTIER ID ARRAY
Rule 22    instruction_list -> instruction
Rule 23    instruction_list -> instruction_list instruction
Rule 24    expression_assign -> ID ASSIGNMENT expression_arth
Rule 25    expression_assign -> ID ASSIGNMENT expression_log
Rule 26    expression_assign -> ID ASSIGNMENT function_call
Rule 27    instruction -> if_exprs POINT_VIRG
Rule 28    instruction -> if_exprs
Rule 29    instruction -> si_exprs POINT_VIRG
Rule 30    instruction -> si_exprs
Rule 31    instruction -> while_exprs
Rule 32    instruction -> while_exprs POINT_VIRG
Rule 33    instruction -> ecrire_msg POINT_VIRG
Rule 34    instruction -> lire_msg POINT_VIRG
Rule 35    instruction -> ecrire_msg
Rule 36    instruction -> lire_msg
Rule 37    instruction -> expression_arth
Rule 38    instruction -> expression_log
Rule 39    instruction -> expression_compare
Rule 40    instruction -> expression_assign POINT_VIRG
Rule 41    instruction -> expression_assign
Rule 42    instruction -> expression_uminus
Rule 43    ecrire_msg -> ECRIRE LPAREN expression_arth RPAREN
Rule 44    ecrire_msg -> PRINT LPAREN expression_arth RPAREN
Rule 45    lire_msg -> LIRE LPAREN ID RPAREN
Rule 46    expression_arth -> expression_arth ADD_OP expression_arth
Rule 47    expression_arth -> expression_arth MUL_OP expression_arth
Rule 48    expression_arth -> expression_uminus
Rule 49    expression_arth -> token
Rule 50    expression_arth -> paren_expression_arth
Rule 51    token -> NUMBER
Rule 52    token -> ID
Rule 53    token -> STRING
Rule 54    token -> CHARACTER
Rule 55    if_exprs -> IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE
Rule 56    if_exprs -> IF LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
Rule 57    if_exprs -> IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
Rule 58    si_exprs -> SI expression_log ALORS_MIN LBRACE instruction_list RBRACE
Rule 59    si_exprs -> SI expression_log ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
Rule 60    si_exprs -> SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
Rule 61    si_exprs -> SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
Rule 62    while_exprs -> WHILE LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
Rule 63    while_exprs -> TANTQUE LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
Rule 64    while_exprs -> TANTQUE expression_log ALORS_MAJ LBRACE instruction_list RBRACE
Rule 65    while_exprs -> TANTQUE expression_log ALORS_MIN LBRACE instruction_list RBRACE
Rule 66    while_exprs -> TANTQUE expression_log FAIRE LBRACE instruction_list RBRACE
Rule 67    while_exprs -> TANTQUE LPAREN expression_log RPAREN FAIRE LBRACE instruction_list RBRACE
Rule 68    expression_log -> expression_log AND expression_log
Rule 69    expression_log -> expression_log OR expression_log
Rule 70    expression_log -> expression_compare
Rule 71    expression_log -> NOT LPAREN expression_log RPAREN
Rule 72    expression_compare -> expression_arth GREATER expression_arth
Rule 73    expression_compare -> expression_arth LESS expression_arth
Rule 74    expression_compare -> expression_arth GREATER_EQUAL expression_arth
Rule 75    expression_compare -> expression_arth LESS_EQUAL expression_arth
Rule 76    expression_compare -> expression_arth EQUAL expression_arth
Rule 77    expression_compare -> expression_arth INEQUAL expression_arth
Rule 78    expression_compare -> expression_arth NOT expression_arth
Rule 79    paren_expression_arth -> LPAREN expression_arth RPAREN
Rule 80    expression_uminus -> ADD_OP expression_arth

Terminals, with rules where they appear

ADD_OP               : 46 80
ALORS_MAJ            : 55 57 64
ALORS_MIN            : 58 59 60 61 63 65
AND                  : 68
ARRAY                : 19 20 21
ASSIGNMENT           : 24 25 26
BLANC                : 
CHARACTER            : 54
COMMA                : 11 12 17 18 20 21
ECRIRE               : 43
ELSE                 : 
ENTIER               : 6 14 15 18 21
EQUAL                : 76
FAIRE                : 66 67
FUNCTION             : 
GREATER              : 72
GREATER_EQUAL        : 74
ID                   : 7 8 9 11 16 17 18 19 20 21 24 25 26 45 52
IF                   : 55 56 57
INEQUAL              : 77
LBRACE               : 4 5 6 7 55 56 57 57 58 59 59 60 61 61 62 63 64 65 66 67
LBRACKET             : 
LESS                 : 73
LESS_EQUAL           : 75
LIRE                 : 45
LPAREN               : 4 5 6 7 8 43 44 45 56 60 61 62 63 67 71 79
MAIN                 : 4 5 6
MUL_OP               : 47
NOT                  : 71 78
NUMBER               : 10 12 51
OR                   : 69
POINT_VIRG           : 13 14 27 29 32 33 34 40
PRINT                : 44
RBRACE               : 4 5 6 7 55 56 57 57 58 59 59 60 61 61 62 63 64 65 66 67
RBRACKET             : 
RETOUR               : 13
RPAREN               : 4 5 6 7 8 43 44 45 56 60 61 62 63 67 71 79
SI                   : 58 59 60 61
SINON                : 57 59 61
STRING               : 53
TANTQUE              : 63 64 65 66 67
THEN                 : 
WHILE                : 62
error                : 
ignore_COMMENT       : 
newline              : 

Nonterminals, with rules where they appear

argument_list        : 8 11 12
debut                : 1 0
ecrire_msg           : 33 35
expression_arth      : 24 37 43 44 46 46 47 47 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 80
expression_assign    : 40 41
expression_compare   : 39 70
expression_log       : 25 38 55 56 57 58 59 60 61 62 63 64 65 66 67 68 68 69 69 71
expression_uminus    : 42 48
function_call        : 26
function_declaration : 1
if_exprs             : 27 28
instruction          : 13 22 23
instruction_list     : 3 4 5 6 7 23 55 56 57 57 58 59 59 60 61 61 62 63 64 65 66 67
lire_msg             : 34 36
list_dec             : 5 6 7 7
list_id              : 14 15 17 18 20 21
main                 : 2
paren_expression_arth : 50
retour_expression    : 6 7
si_exprs             : 29 30
token                : 49
while_exprs          : 31 32

Parsing method: LALR

state 0

    (0) S' -> . debut
    (1) debut -> . function_declaration debut
    (2) debut -> . main
    (3) debut -> . instruction_list
    (7) function_declaration -> . ID LPAREN list_dec RPAREN list_dec LBRACE instruction_list retour_expression RBRACE
    (4) main -> . MAIN LPAREN RPAREN LBRACE instruction_list RBRACE
    (5) main -> . MAIN LPAREN RPAREN list_dec LBRACE instruction_list RBRACE
    (6) main -> . ENTIER MAIN LPAREN list_dec RPAREN LBRACE instruction_list retour_expression RBRACE
    (22) instruction_list -> . instruction
    (23) instruction_list -> . instruction_list instruction
    (27) instruction -> . if_exprs POINT_VIRG
    (28) instruction -> . if_exprs
    (29) instruction -> . si_exprs POINT_VIRG
    (30) instruction -> . si_exprs
    (31) instruction -> . while_exprs
    (32) instruction -> . while_exprs POINT_VIRG
    (33) instruction -> . ecrire_msg POINT_VIRG
    (34) instruction -> . lire_msg POINT_VIRG
    (35) instruction -> . ecrire_msg
    (36) instruction -> . lire_msg
    (37) instruction -> . expression_arth
    (38) instruction -> . expression_log
    (39) instruction -> . expression_compare
    (40) instruction -> . expression_assign POINT_VIRG
    (41) instruction -> . expression_assign
    (42) instruction -> . expression_uminus
    (55) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (56) if_exprs -> . IF LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (57) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (58) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (59) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (60) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (61) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (62) while_exprs -> . WHILE LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (63) while_exprs -> . TANTQUE LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (64) while_exprs -> . TANTQUE expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (65) while_exprs -> . TANTQUE expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (66) while_exprs -> . TANTQUE expression_log FAIRE LBRACE instruction_list RBRACE
    (67) while_exprs -> . TANTQUE LPAREN expression_log RPAREN FAIRE LBRACE instruction_list RBRACE
    (43) ecrire_msg -> . ECRIRE LPAREN expression_arth RPAREN
    (44) ecrire_msg -> . PRINT LPAREN expression_arth RPAREN
    (45) lire_msg -> . LIRE LPAREN ID RPAREN
    (46) expression_arth -> . expression_arth ADD_OP expression_arth
    (47) expression_arth -> . expression_arth MUL_OP expression_arth
    (48) expression_arth -> . expression_uminus
    (49) expression_arth -> . token
    (50) expression_arth -> . paren_expression_arth
    (68) expression_log -> . expression_log AND expression_log
    (69) expression_log -> . expression_log OR expression_log
    (70) expression_log -> . expression_compare
    (71) expression_log -> . NOT LPAREN expression_log RPAREN
    (72) expression_compare -> . expression_arth GREATER expression_arth
    (73) expression_compare -> . expression_arth LESS expression_arth
    (74) expression_compare -> . expression_arth GREATER_EQUAL expression_arth
    (75) expression_compare -> . expression_arth LESS_EQUAL expression_arth
    (76) expression_compare -> . expression_arth EQUAL expression_arth
    (77) expression_compare -> . expression_arth INEQUAL expression_arth
    (78) expression_compare -> . expression_arth NOT expression_arth
    (24) expression_assign -> . ID ASSIGNMENT expression_arth
    (25) expression_assign -> . ID ASSIGNMENT expression_log
    (26) expression_assign -> . ID ASSIGNMENT function_call
    (80) expression_uminus -> . ADD_OP expression_arth
    (51) token -> . NUMBER
    (52) token -> . ID
    (53) token -> . STRING
    (54) token -> . CHARACTER
    (79) paren_expression_arth -> . LPAREN expression_arth RPAREN

    ID              shift and go to state 5
    MAIN            shift and go to state 7
    ENTIER          shift and go to state 8
    IF              shift and go to state 20
    SI              shift and go to state 21
    WHILE           shift and go to state 22
    TANTQUE         shift and go to state 23
    ECRIRE          shift and go to state 24
    PRINT           shift and go to state 25
    LIRE            shift and go to state 26
    NOT             shift and go to state 30
    ADD_OP          shift and go to state 27
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    CHARACTER       shift and go to state 33
    LPAREN          shift and go to state 6

    debut                          shift and go to state 1
    function_declaration           shift and go to state 2
    main                           shift and go to state 3
    instruction_list               shift and go to state 4
    instruction                    shift and go to state 9
    if_exprs                       shift and go to state 10
    si_exprs                       shift and go to state 11
    while_exprs                    shift and go to state 12
    ecrire_msg                     shift and go to state 13
    lire_msg                       shift and go to state 14
    expression_arth                shift and go to state 15
    expression_log                 shift and go to state 16
    expression_compare             shift and go to state 17
    expression_assign              shift and go to state 18
    expression_uminus              shift and go to state 19
    token                          shift and go to state 28
    paren_expression_arth          shift and go to state 29

state 1

    (0) S' -> debut .



state 2

    (1) debut -> function_declaration . debut
    (1) debut -> . function_declaration debut
    (2) debut -> . main
    (3) debut -> . instruction_list
    (7) function_declaration -> . ID LPAREN list_dec RPAREN list_dec LBRACE instruction_list retour_expression RBRACE
    (4) main -> . MAIN LPAREN RPAREN LBRACE instruction_list RBRACE
    (5) main -> . MAIN LPAREN RPAREN list_dec LBRACE instruction_list RBRACE
    (6) main -> . ENTIER MAIN LPAREN list_dec RPAREN LBRACE instruction_list retour_expression RBRACE
    (22) instruction_list -> . instruction
    (23) instruction_list -> . instruction_list instruction
    (27) instruction -> . if_exprs POINT_VIRG
    (28) instruction -> . if_exprs
    (29) instruction -> . si_exprs POINT_VIRG
    (30) instruction -> . si_exprs
    (31) instruction -> . while_exprs
    (32) instruction -> . while_exprs POINT_VIRG
    (33) instruction -> . ecrire_msg POINT_VIRG
    (34) instruction -> . lire_msg POINT_VIRG
    (35) instruction -> . ecrire_msg
    (36) instruction -> . lire_msg
    (37) instruction -> . expression_arth
    (38) instruction -> . expression_log
    (39) instruction -> . expression_compare
    (40) instruction -> . expression_assign POINT_VIRG
    (41) instruction -> . expression_assign
    (42) instruction -> . expression_uminus
    (55) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (56) if_exprs -> . IF LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (57) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (58) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (59) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (60) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (61) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (62) while_exprs -> . WHILE LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (63) while_exprs -> . TANTQUE LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (64) while_exprs -> . TANTQUE expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (65) while_exprs -> . TANTQUE expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (66) while_exprs -> . TANTQUE expression_log FAIRE LBRACE instruction_list RBRACE
    (67) while_exprs -> . TANTQUE LPAREN expression_log RPAREN FAIRE LBRACE instruction_list RBRACE
    (43) ecrire_msg -> . ECRIRE LPAREN expression_arth RPAREN
    (44) ecrire_msg -> . PRINT LPAREN expression_arth RPAREN
    (45) lire_msg -> . LIRE LPAREN ID RPAREN
    (46) expression_arth -> . expression_arth ADD_OP expression_arth
    (47) expression_arth -> . expression_arth MUL_OP expression_arth
    (48) expression_arth -> . expression_uminus
    (49) expression_arth -> . token
    (50) expression_arth -> . paren_expression_arth
    (68) expression_log -> . expression_log AND expression_log
    (69) expression_log -> . expression_log OR expression_log
    (70) expression_log -> . expression_compare
    (71) expression_log -> . NOT LPAREN expression_log RPAREN
    (72) expression_compare -> . expression_arth GREATER expression_arth
    (73) expression_compare -> . expression_arth LESS expression_arth
    (74) expression_compare -> . expression_arth GREATER_EQUAL expression_arth
    (75) expression_compare -> . expression_arth LESS_EQUAL expression_arth
    (76) expression_compare -> . expression_arth EQUAL expression_arth
    (77) expression_compare -> . expression_arth INEQUAL expression_arth
    (78) expression_compare -> . expression_arth NOT expression_arth
    (24) expression_assign -> . ID ASSIGNMENT expression_arth
    (25) expression_assign -> . ID ASSIGNMENT expression_log
    (26) expression_assign -> . ID ASSIGNMENT function_call
    (80) expression_uminus -> . ADD_OP expression_arth
    (51) token -> . NUMBER
    (52) token -> . ID
    (53) token -> . STRING
    (54) token -> . CHARACTER
    (79) paren_expression_arth -> . LPAREN expression_arth RPAREN

    ID              shift and go to state 5
    MAIN            shift and go to state 7
    ENTIER          shift and go to state 8
    IF              shift and go to state 20
    SI              shift and go to state 21
    WHILE           shift and go to state 22
    TANTQUE         shift and go to state 23
    ECRIRE          shift and go to state 24
    PRINT           shift and go to state 25
    LIRE            shift and go to state 26
    NOT             shift and go to state 30
    ADD_OP          shift and go to state 27
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    CHARACTER       shift and go to state 33
    LPAREN          shift and go to state 6

    function_declaration           shift and go to state 2
    debut                          shift and go to state 34
    main                           shift and go to state 3
    instruction_list               shift and go to state 4
    instruction                    shift and go to state 9
    if_exprs                       shift and go to state 10
    si_exprs                       shift and go to state 11
    while_exprs                    shift and go to state 12
    ecrire_msg                     shift and go to state 13
    lire_msg                       shift and go to state 14
    expression_arth                shift and go to state 15
    expression_log                 shift and go to state 16
    expression_compare             shift and go to state 17
    expression_assign              shift and go to state 18
    expression_uminus              shift and go to state 19
    token                          shift and go to state 28
    paren_expression_arth          shift and go to state 29

state 3

    (2) debut -> main .

    $end            reduce using rule 2 (debut -> main .)


state 4

    (3) debut -> instruction_list .
    (23) instruction_list -> instruction_list . instruction
    (27) instruction -> . if_exprs POINT_VIRG
    (28) instruction -> . if_exprs
    (29) instruction -> . si_exprs POINT_VIRG
    (30) instruction -> . si_exprs
    (31) instruction -> . while_exprs
    (32) instruction -> . while_exprs POINT_VIRG
    (33) instruction -> . ecrire_msg POINT_VIRG
    (34) instruction -> . lire_msg POINT_VIRG
    (35) instruction -> . ecrire_msg
    (36) instruction -> . lire_msg
    (37) instruction -> . expression_arth
    (38) instruction -> . expression_log
    (39) instruction -> . expression_compare
    (40) instruction -> . expression_assign POINT_VIRG
    (41) instruction -> . expression_assign
    (42) instruction -> . expression_uminus
    (55) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (56) if_exprs -> . IF LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (57) if_exprs -> . IF expression_log ALORS_MAJ LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (58) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (59) si_exprs -> . SI expression_log ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (60) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (61) si_exprs -> . SI LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE SINON LBRACE instruction_list RBRACE
    (62) while_exprs -> . WHILE LPAREN expression_log RPAREN LBRACE instruction_list RBRACE
    (63) while_exprs -> . TANTQUE LPAREN expression_log RPAREN ALORS_MIN LBRACE instruction_list RBRACE
    (64) while_exprs -> . TANTQUE expression_log ALORS_MAJ LBRACE instruction_list RBRACE
    (65) while_exprs -> . TANTQUE expression_log ALORS_MIN LBRACE instruction_list RBRACE
    (66) while_exprs -> . TANTQUE expression_log FAIRE LBRACE instruction_list RBRACE
    (67) while_exprs -> . TANTQUE LPAREN expression_log RPAREN FAIRE LBRACE instruction_list RBRACE
    (43) ecrire_msg -> . ECRIRE LPAREN expression_arth RPAREN
    (44) ecrire_msg -> . PRINT LPAREN expression_arth RPAREN
    (45) lire_msg -> . LIRE LPAREN ID RPAREN
    (46) expression_arth -> . expression_arth ADD_OP expression_arth
    (47) expression_arth -> . expression_arth MUL_OP expression_arth
    (48) expression_arth -> . expression_uminus
    (49) expression_arth -> . token
    (50) expression_arth -> . paren_expression_arth
    (68) expression_log -> . expression_log AND expression_log
    (69) expression_log -> . expression_log OR expression_log
    (70) expression_log -> . expression_compare
    (71) expression_log -> . NOT LPAREN expression_log RPAREN
    (72) expression_compare -> . expression_arth GREATER expression_arth
    (73) expression_compare -> . expression_arth LESS expression_arth
    (74) expression_compare -> . expression_arth GREATER_EQUAL expression_arth
    (75) expression_compare -> . expression_arth LESS_EQUAL expression_arth
    (76) expression_compare -> . expression_arth EQUAL expression_arth
    (77) expression_compare -> . expression_arth INEQUAL expression_arth
    (78) expression_compare -> . expression_arth NOT expression_arth
    (24) expression_assign -> . ID ASSIGNMENT expression_arth
    (25) expression_assign -> . ID ASSIGNMENT expression_log
    (26) expression_assign -> . ID ASSIGNMENT function_call
    (80) expression_uminus -> . ADD_OP expression_arth
    (51) token -> . NUMBER
    (52) token -> . ID
    (53) token -> . STRING
    (54) token -> . CHARACTER
    (79) paren_expression_arth -> . LPAREN expression_arth RPAREN

    $end            reduce using rule 3 (debut -> instruction_list .)
    IF              shift and go to state 20
    SI              shift and go to state 21
    WHILE           shift and go to state 22
    TANTQUE         shift and go to state 23
    ECRIRE          shift and go to state 24
    PRINT           shift and go to state 25
    LIRE            shift and go to state 26
    NOT             shift and go to state 30
    ID              shift and go to state 36
    ADD_OP          shift and go to state 27
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    CHARACTER       shift and go to state 33
    LPAREN          shift and go to state 6

    instruction                    shift and go to state 35
    if_exprs                       shift and go to state 10
    si_exprs                       shift and go to state 11
    while_exprs                    shift and go to state 12
    ecrire_msg                     shift and go to state 13
    lire_msg                       shift and go to state 14
    expression_arth                shift and go to state 15
    expression_log                 shift and go to state 16
    expression_compare             shift and go to state 17
    expression_assign              shift and go to state 18
    expression_uminus              shift and go to state 19
    token                          shift and go to state 28
    paren_expression_arth          shift and go to state 29

state 5

    (7) function_declaration -> ID . LPAREN list_dec RPAREN list_dec LBRACE instruction_list retour_expression RBRACE
    (24) expression_assign -> ID . ASSIGNMENT expression_arth
    (25) expression_assign -> ID . ASSIGNMENT expression_log
    (26) expression_assign -> ID . ASSIGNMENT function_call
    (52) token -> ID .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 37
    ASSIGNMENT      shift and go to state 38
    ADD_OP          reduce using rule 52 (token -> ID .)
    MUL_OP          reduce using rule 52 (token -> ID .)
    GREATER         reduce using rule 52 (token -> ID .)
    LESS            reduce using rule 52 (token -> ID .)
    GREATER_EQUAL   reduce using rule 52 (token -> ID .)
    LESS_EQUAL      reduce using rule 52 (token -> ID .)
    EQUAL           reduce using rule 52 (token -> ID .)
    INEQUAL         reduce using rule 52 (token -> ID .)
    NOT             reduce using rule 52 (token -> ID .)
    IF              reduce using rule 52 (token -> ID .)
    SI              reduce using rule 52 (token -> ID .)
    WHILE           reduce using rule 52 (token -> ID .)
    TANTQUE         reduce using rule 52 (token -> ID .)
    ECRIRE          reduce using rule 52 (token -> ID .)
    PRINT           reduce using rule 52 (token -> ID .)
    LIRE            reduce using rule 52 (token -> ID .)
    ID              reduce using rule 52 (token -> ID .)
    NUMBER          reduce using rule 52 (token -> ID .)
    STRING          reduce using rule 52 (token -> ID .)
    CHARACTER       reduce using rule 52 (token -> ID .)
    $end            reduce using rule 52 (token -> ID .)

  ! LPAREN          [ reduce using rule 52 (token -> ID .) ]


state 6

    (79) paren_expression_arth -> LPAREN . expression_arth RPAREN
    (46) expression_arth -> . expression_arth ADD_OP expression_arth
    (47) expression_arth -> . expression_arth MUL_OP expression_arth
    (48) expression_arth -> . expression_uminus
    (49) expression_arth -> . token
    (50) expression_arth -> . paren_expression_arth
    (80) expression_uminus -> . ADD_OP expression_arth
    (51) token -> . NUMBER
    (52) token -> . ID
    (53) token -> . STRING
    (54) token -> . CHARACTER
    (79) paren_expression_arth -> . LPAREN expression_arth RPAREN

    ADD_OP          shift and go to state 27
    NUMBER          shift and go to state 31
    ID              shift and go to state 41
    STRING          shift and go to state 32
    CHARACTER       shift and go to state 33
    LPAREN          shift and go to state 6

    expression_arth                shift and go to state 39
    expression_uminus              shift and go to state 40
    token                          shift and go to state 28
    paren_expression_arth          shift and go to state 29

state 7

    (4) main -> MAIN . LPAREN RPAREN LBRACE instruction_list RBRACE
    (5) main -> MAIN . LPAREN RPAREN list_dec LBRACE instruction_list RBRACE

    LPAREN          shift and go to state 42


state 8

    (6) main -> ENTIER . MAIN LPAREN list_dec RPAREN LBRACE instruction_list retour_expression RBRACE

    MAIN            shift and go to state 43


state 9

    (22) instruction_list -> instruction .

    IF              reduce using rule 22 (instruction_list -> instruction .)
    SI              reduce using rule 22 (instruction_list -> instruction .)
    WHILE           reduce using rule 22 (instruction_list -> instruction .)
    TANTQUE         reduce using rule 22 (instruction_list -> instruction .)
    ECRIRE          reduce using rule 22 (instruction_list -> instruction .)
    PRINT           reduce using rule 22 (instruction_list -> instruction .)
    LIRE            reduce using rule 22 (instruction_list -> instruction .)
    NOT             reduce using rule 22 (instruction_list -> instruction .)
    ID              reduce using rule 22 (instruction_list -> instruction .)
    ADD_OP          reduce using rule 22 (instruction_list -> instruction .)
    NUMBER          reduce using rule 22 (instruction_list -> instruction .)
    STRING          reduce using rule 22 (instruction_list -> instruction .)
    CHARACTER       reduce using rule 22 (instruction_list -> instruction .)
    LPAREN          reduce using rule 22 (instruction_list -> instruction .)
    $end            reduce using rule 22 (instruction_list -> instruction .)
    RBRACE          reduce using rule 22 (instruction_list -> instruction .)
    RETOUR          reduce using rule 22 (instruction_list -> instruction .)


state 10

    (27) instruction -> if_exprs . POINT_VIRG
    (28) instruction -> if_exprs .

  ! shift/reduce conflict for POINT_VIRG resolved as shift
    POINT_VIRG      shift and go to state 44
    IF              reduce using rule 28 (instruction -> if_exprs .)
    SI              reduce using rule 28 (instruction -> if_exprs .)
    WHILE           reduce using rule 28 (instruction -> if_exprs .)
    TANTQUE         reduce using rule 28 (instruction -> if_exprs .)
    ECRIRE          reduce using rule 28 (instruction -> if_exprs .)
    PRINT           reduce using rule 28 (instruction -> if_exprs .)
    LIRE            reduce using rule 28 (instruction -> if_exprs .)
    NOT             reduce using rule 28 (instruction -> if_exprs .)
    ID              reduce using rule 28 (instruction -> if_exprs .)
    ADD_OP          reduce using rule 28 (instruction -> if_exprs .)
    NUMBER          reduce using rule 28 (instruction -> if_exprs .)
    STRING          reduce using rule 28 (instruction -> if_exprs .)
    CHARACTER       reduce using rule 28 (instruction -> if_exprs .)
    LPAREN          reduce using rule 28 (instruction -> if_exprs .)
    $end            reduce using rule 28 (instruction -> if_exprs .)
    RBRACE          reduce using rule 28 (instruction -> if_exprs .)
    RETOUR          reduce using rule 28 (instruction -> if_exprs .)

  ! POINT_VIRG      [ reduce using rule 28 (instruction -> if_exprs .) ]


state 11

    (29) instruction -> si_exprs . POINT_VIRG
    (30) instruction -> si_exprs .

  ! shift/reduce conflict for POINT_VIRG resolved as shift
    POINT_VIRG      shift and go to state 45
    IF              reduce using rule 30 (instruction -> si_exprs .)
    SI              reduce using rule 30 (instruction -> si_exprs .)
    WHILE           reduce using rule 30 (instruction -> si_exprs .)
    TANTQUE         reduce using rule 30 (instruction -> si_exprs .)
    ECRIRE          reduce using rule 30 (instruction -> si_exprs .)
    PRINT           reduce using rule 30 (instruction -> si_exprs .)
    LIRE            reduce using rule 30 (instruction -> si_exprs .)
    NOT             reduce using rule 30 (instruction -> si_exprs .)
    ID              reduce using rule 30 (instruction -> si_exprs .)
    ADD_OP          reduce using rule 30 (instruction -> si_exprs .)
    NUMBER          reduce using rule 30 (instruction -> si_exprs .)
    STRING          reduce using rule 30 (instruction -> si_exprs .)
    CHARACTER       reduce using rule 30 (instruction -> si_exprs .)
    LPAREN          reduce using rule 30 (instruction -> si_exprs .)
    $end            reduce using rule 30 (instruction -> si_exprs .)
    RBRACE          reduce using rule 30 (instruction -> si_exprs .)
    RETOUR          reduce using rule 30 (instruction -> si_exprs .)

  ! POINT_VIRG      [ reduce using rule 30 (instruction -> si_exprs .) ]


state 12

    (31) instruction -> while_exprs .
    (32) instruction -> while_exprs . POINT_VIRG

  ! shift/reduce conflict for POINT_VIRG resolved as shift
    IF              reduce using rule 31 (instruction -> while_exprs .)
    SI              reduce using rule 31 (instruction -> while_exprs .)
    WHILE           reduce using rule 31 (instruction -> while_exprs .)
    TANTQUE         reduce using rule 31 (instruction -> while_exprs .)
    ECRIRE          reduce using rule 31 (instruction -> while_exprs .)
    PRINT           reduce using rule 31 (instruction -> while_exprs .)
    LIRE            reduce using rule 31 (instruction -> while_exprs .)
    NOT             reduce using rule 31 (instruction -> while_exprs .)
    ID              reduce using rule 31 (instruction -> while_exprs .)
    ADD_OP          reduce using rule 31 (instruction -> while_exprs .)
    NUMBER          reduce using rule 31 (instruction -> while_exprs .)
    STRING          reduce using rule 31 (instruction -> while_exprs .)
    CHARACTER       reduce using rule 31 (instruction -> while_exprs .)
    LPAREN          reduce using rule 31 (instruction -> while_exprs .)
    $end            reduce using rule 31 (instruction -> while_exprs .)
    RBRACE          reduce using rule 31 (instruction -> while_exprs .)
    RETOUR          reduce using rule 31 (instruction -> while_exprs .)
    POINT_VIRG      shift and go to state 46

  ! POINT_VIRG      [ reduce using rule 31 (instruction -> while_exprs .) ]


state 13

    (33) instruction -> ecrire_msg . POINT_VIRG
    (35) instruction -> ecrire_msg .
